--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# Port suggested by Nuwe
+server.port= 5000
 
+# Heroku - MongoDB configuration
+spring.data.mongodb.uri= mongodb://localhost:27017/jump2digital
