MongoDB config LUUID to UUID

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 # Port suggested by Nuwe
 server.port= 5000
 
-# Heroku - MongoDB configuration
+# MongoDB configuration
 spring.data.mongodb.uri= mongodb://localhost:27017/jump2digital
+
+# MongoDB UUID v4
+spring.data.mongodb.uuid-representation= standard
